# python_django

./: .gitignore  Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  quieries.sql  requirements.txt  virus.txt
mysite/: db.sqlite3
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_article_author_article_pub_date_and_more.py  0003_alter_article_category_alter_article_pub_date_and_more.py  0004_alter_article_content_alter_article_pub_date.py
mysite/database/: db.sqlite3
mysite/home/: urls.py  views.py
mysite/home/templates/home/: base2.html
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  shopapp.product-export.csv  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixtures.json  order-fixtures.json  product-fixtures.json  profile-fixtures.json  shopapp-fixtures.json  users-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_create_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_alter_product_options_remove_order_products_and_more.py  0009_alter_product_options_order_products.py  0010_alter_product_options_alter_product_table.py  0011_product_created_by.py  0012_remove_product_created_by.py  0013_product_created_by.py  0014_alter_product_created_by.py  0015_alter_product_created_by.py  0016_order_receipt.py  0017_product_preview.py  0018_alter_product_preview.py  0019_alter_product_preview.py  0020_alter_product_preview.py  0021_alter_product_preview.py  0022_productimage.py  0023_alter_productimage_product.py  (+1 more)
(+43 files in other folders)
