[project]
name = "pycharmprojects"
version = "0.1.0"
description = ""
authors = [
    {name = "kik",email = "mr.nifasse@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.1.2)",
    "djangorestframework (==3.15.2)",
    "django-filter (>=25.1,<26.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "pillow (==11.1.0)",
    "gunicorn (==23.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "attrs (==25.1.0)",
    "django-appconf (>=1.1.0,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-imagekit (>=5.0.0,<6.0.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "flake8 (==7.1.2)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "packaging (>=24.2,<25.0)",
    "pilkit (>=3.0,<4.0)",
    "pycodestyle (==2.12.1)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pyflakes (==3.2.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "rpds-py (==0.23.1)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "typing-extensions (==4.12.2)",
    "uritemplate (>=4.1.1,<5.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
