[project]
name = "python-django"
version = "0.1.0"
description = ""
authors = [
    {name = "kik",email = "mr.nifasse@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==5.1.2)",
    "django-rest-framework (==0.1.0)",
    "djangorestframework (==3.15.2)",
    "django-debug-toolbar (==5.1.0)",
    "django-filter (==25.1)",
    "pillow (==11.1.0)",
    "gunicorn (==23.0.0)",
    "drf-spectacular (==0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
